# csfml-cmake-template

./: CMakeLists.txt  README.md  main.c
